
Sat Jan 29 15:59:05 CET 2005 Paolo Molaro <lupus@ximian.com>

	* monitor.c: formatting changes to comply with the
	mono coding style and remove #ifdefs from the code.

Sat Jan 29 15:18:54 CET 2005 Paolo Molaro <lupus@ximian.com>

	* metadata.c, private.h: remove some unneeded data
	and use a more compact representation for table schemas.

Fri Jan 28 18:23:44 CET 2005 Paolo Molaro <lupus@ximian.com>

	* metadata.c, metadata-internals.h: add mono_aligned_addr_hash()
	to get a better distribution in hash tables.
	* *.c: use mono_aligned_addr_hash() where appropriate.
	* assembly.c: make var static.

2005-01-28  Zoltan Varga  <vargaz@freemail.hu>

	* domain-internals.h: Put MonoJitInfo on a diet.

	* domain.c: Fix a warning.

Wed Jan 26 22:20:46 CET 2005 Paolo Molaro <lupus@ximian.com>

	* gc.c: rework the gc handles code to reuse handles
	when freed.

Wed Jan 26 17:34:09 CET 2005 Paolo Molaro <lupus@ximian.com>

	* domain.c: fixed long standing bug in mono_string_equal() which
	was brought to light with the ldstr changes.

2005-01-26  Sebastien Pouliot  <sebastien@ximian.com>

	* reflection.c: Remove warning by adding missing include for marshal.h

Tue Jan 25 18:06:00 CET 2005 Paolo Molaro <lupus@ximian.com>

	* domain.c, object.c: change the ldstr_table to hold
	MonoString* as keys: makes the runtime isinterned lookup
	faster and simplifies memory management.

2005-01-25  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* icall.c: Renamed GetEnvironmentVariable so internal* so it was
	possible to add imperative security checks before calling the icall.
	* reflection.c: Return security attributes on the original MonoMethod
	(and not the wrapped one). This fix permissions on icalls.

2005-01-25  Dick Porter  <dick@ximian.com>

	* icall.c (ves_icall_System_CurrentTimeZone_GetTimeZoneData): Make
	the check for mktime() support actually test the mktime() return
	value.  "Fixes" bug 71682, though the output is still different to
	MS.
