@@ -1,3 +1,7 @@
+2005-01-29  Zoltan Varga  <vargaz@freemail.hu>
+
+	* object.c (mono_runtime_get_main_args): Return an array from the
+	current domain here. Fixes #71938.
 
 Sat Jan 29 15:59:05 CET 2005 Paolo Molaro <lupus@ximian.com>
 
